--- a/sharinpix/src/classes/Action.cls
+++ b/sharinpix/src/classes/Action.cls
@@ -2,4 +2,8 @@ public with sharing class Action {
 	public string field_name;
 	public string value;
 	public string custom_value;
+
+	public Action(){
+		
+	}
 }
