timer / prefix / url

--- a/sharinpix-free/src/classes/ImageController.cls
+++ b/sharinpix-free/src/classes/ImageController.cls
@@ -68,16 +68,8 @@ public with sharing class ImageController {
     }
 
     private static void appendToFile(Id fileId, String base64Data) {
-        base64Data = EncodingUtil.urlDecode(base64Data, 'UTF-8');
-        Attachment a = [
-            SELECT Id, Body
-            FROM Attachment
-            WHERE Id = :fileId
-        ];
-
-        String existingBody = EncodingUtil.base64Encode(a.Body);
-        a.Body = EncodingUtil.base64Decode(existingBody + base64Data); 
-        
+        Attachment a = new Attachment(Id=fileId);
+        a.Body = EncodingUtil.base64Decode(EncodingUtil.base64Encode([Select Body From Attachment Where Id = :fileId].body) + EncodingUtil.urlDecode(base64Data, 'UTF-8')); 
         update a;
     }
 }
